k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: NodePort
  selector:
    app: springboot
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30080
